tests/import_as_with_symbols_bad.stderr
tests/import_as_with_symbols_bad.hop:2:1: error: HOP2023: import with symbol list cannot use as _
