tests/import_as_with_symbols_bad.hop
// Verifies import as with symbols is rejected.
import "lib/math" as _ { Double }

fn main() {}
